[package]
name = "games_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
env_logger = "0.11.3"
rfd = "0.14.1"
winapi = { version = "0.3.9", features = ["winuser"] }
systemicons = "0.7.0"
image = "0.25.1"
log = "0.4"